bin_PROGRAMS = buniq btest
buniq_SOURCES = main.c main.h hash.c hash.h bloom-filter.c bloom-filter.h mem.c mem.h util.c util.h md5.c md5.h getopt.c getopt1.c getopt.h ../include/sysdep.h ../include/config.h ../include/common.h
buniq_LDADD = 
btest_SOURCES = btest.c bloom.c bloom.h  ../include/sysdep.h ../include/config.h ../include/common.h
btest_LDADD = 
