bin_PROGRAMS = buniq btest
buniq_SOURCES = main.c main.h hash.c hash.h murmur.c murmur.h mem.c mem.h util.c util.h md5.c md5.h ../include/sysdep.h ../include/config.h ../include/common.h
buniq_LDADD = -lm
btest_SOURCES = murmur.c murmur.h ../include/sysdep.h ../include/config.h ../include/common.h
btest_LDADD = -lm
