bin_PROGRAMS = buniq
buniq_SOURCES = main.c main.h hash.c hash.h murmur.c murmur.h buniq.c buniq.h bloom-filter.c bloom-filter.h dablooms.c dablooms.h parallel.c parallel.h output.c output.h security.c security.h mem.c mem.h util.c util.h md5.c md5.h ../include/sysdep.h ../include/config.h ../include/common.h
buniq_LDADD = -lm -lpthread